--- a/index.html
+++ b/index.html
@@ -95,30 +95,12 @@
   <p>Jordan 5 “Laney” — full cleaning transformation</p>
 
   <div class="flex-pair">
-    <div>
-      <p><strong>Before</strong></p>
-      <img src="before1.jpg" class="clean-pic" alt="Before 1" />
-    </div>
-    <div>
-      <p><strong>After</strong></p>
-      <img src="after1.jpg" class="clean-pic" alt="After 1" />
-    </div>
-    <div>
-      <p><strong>Before</strong></p>
-      <img src="before2.jpg" class="clean-pic" alt="Before 2" />
-    </div>
-    <div>
-      <p><strong>After</strong></p>
-      <img src="after2.jpg" class="clean-pic" alt="After 2" />
-    </div>
-    <div>
-      <p><strong>Before</strong></p>
-      <img src="before3.jpg" class="clean-pic" alt="Before 3" />
-    </div>
-    <div>
-      <p><strong>After</strong></p>
-      <img src="after3.jpg" class="clean-pic" alt="After 3" />
-    </div>
+    <div><p><strong>Before</strong></p><img src="before1.jpg" class="clean-pic" alt="Before 1" /></div>
+    <div><p><strong>After</strong></p><img src="after1.jpg" class="clean-pic" alt="After 1" /></div>
+    <div><p><strong>Before</strong></p><img src="before2.jpg" class="clean-pic" alt="Before 2" /></div>
+    <div><p><strong>After</strong></p><img src="after2.jpg" class="clean-pic" alt="After 2" /></div>
+    <div><p><strong>Before</strong></p><img src="before3.jpg" class="clean-pic" alt="Before 3" /></div>
+    <div><p><strong>After</strong></p><img src="after3.jpg" class="clean-pic" alt="After 3" /></div>
   </div>
 
   <div style="margin-top: 30px;">
@@ -142,8 +124,21 @@
 
 <section>
   <h2>📬 Contact Me</h2>
- <a href="https://instagram.com/tny_supply" class="button" target="_blank">Instagram</a>
+  <a href="https://instagram.com/tny_supply" class="button" target="_blank">Instagram</a>
   <a href="mailto:tonymogon78@gmail.com" class="button">Email Me</a>
+</section>
+
+<section>
+  <h2>⚠️ Important Notice</h2>
+  <p>Please beware of scammers! I, TNY Supply, only operate through this website and my official Instagram: <strong>@tny_supply</strong>.</p>
+  <p>I do not message from other accounts or ask for payments through unfamiliar apps or numbers. If it’s not listed here — it’s not me.</p>
+</section>
+
+<section>
+  <h2>📦 Shoe Cleaning Shipping Address</h2>
+  <p>Send shoes for cleaning to:</p>
+  <p><strong>132 E 163rd St<br>Gardena, CA 90248</strong></p>
+  <p>Please include your name, return address, and IG handle inside the box.</p>
 </section>
 
 <footer>
