--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <section>
   <h2>What I Offer</h2>
   <ul>
-    <li>New & used clothes and shoes</li>
+    <li><s>New & used clothes and shoes (On Hold)</s></li>
     <li>Professional shoe cleaning (scroll down ⬇️)</li>
     <li><s>Airsoft Attachments (On Hold)</s></li>
   </ul>
@@ -147,3 +147,4 @@
 
 </body>
 </html>
+    
