--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <ul>
     <li><s>New & used clothes and shoes (On Hold)</s></li>
     <li>Professional shoe cleaning (scroll down ⬇️)</li>
-    <li><s>Airsoft Attachments (On Hold)</s></li>
+    <li>Airsoft Attachments — beams, sights, and more</li>
   </ul>
 </section>
 
@@ -111,6 +111,17 @@
       <li>Deoxidation prep</li>
     </ul>
   </div>
+</section>
+
+<section>
+  <h2>🎯 Airsoft Attachments</h2>
+  <p>Customize your airsoft setup with affordable, high-quality accessories:</p>
+  <ul>
+    <li>🔦 Tactical beams / lasers</li>
+    <li>🎯 Red dot & reflex sights</li>
+    <li>📦 Compact grips, mounts, and more</li>
+  </ul>
+  <p><strong>DM me on Instagram</strong> <a href="https://instagram.com/tny_supply" target="_blank">@tny_supply</a> or email <a href="mailto:tonymogon78@gmail.com">tonymogon78@gmail.com</a> for available stock and pricing.</p>
 </section>
 
 <section>
@@ -147,4 +158,3 @@
 
 </body>
 </html>
-    
