--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
 <section>
   <h2>🧼 Shoe Cleaning Showcase</h2>
   <p>Jordan 5 “Laney” — full cleaning transformation</p>
-
   <div class="flex-pair">
     <div><p><strong>Before</strong></p><img src="before1.jpg" class="clean-pic" alt="Before 1" /></div>
     <div><p><strong>After</strong></p><img src="after1.jpg" class="clean-pic" alt="After 1" /></div>
@@ -102,26 +101,25 @@
     <div><p><strong>Before</strong></p><img src="before3.jpg" class="clean-pic" alt="Before 3" /></div>
     <div><p><strong>After</strong></p><img src="after3.jpg" class="clean-pic" alt="After 3" /></div>
   </div>
-
-  <div style="margin-top: 30px;">
-    <h3>What We Did</h3>
-    <ul>
-      <li>Deep sole & upper cleaning</li>
-      <li>Netting scrub & lace refresh</li>
-      <li>Deoxidation prep</li>
-    </ul>
-  </div>
 </section>
 
 <section>
-  <h2>🎯 Airsoft Attachments</h2>
-  <p>Customize your airsoft setup with affordable, high-quality accessories:</p>
-  <ul>
-    <li>🔦 Tactical beams / lasers</li>
-    <li>🎯 Red dot & reflex sights</li>
-    <li>📦 Compact grips, mounts, and more</li>
-  </ul>
-  <p><strong>DM me on Instagram</strong> <a href="https://instagram.com/tny_supply" target="_blank">@tny_supply</a> or email <a href="mailto:tonymogon78@gmail.com">tonymogon78@gmail.com</a> for available stock and pricing.</p>
+  <h2>🎯 Airsoft Attachments (Shipping Available)</h2>
+  <p>All products can be shipped. DM or email to order — secure your upgrade today.</p>
+  <div class="flex-pair">
+    <div>
+      <p><strong>Reflex Sight – $50</strong></p>
+      <img src="reflex1.jpg" class="clean-pic" alt="Reflex Sight Box" />
+      <img src="reflex2.jpg" class="clean-pic" alt="Reflex Sight Open" style="margin-top:10px;" />
+      <a href="https://instagram.com/tny_supply" class="button" target="_blank">Buy Now (DM)</a>
+    </div>
+    <div>
+      <p><strong>MCCC Tactical Flashlight – $25</strong></p>
+      <img src="beam1.jpg" class="clean-pic" alt="Flashlight Box" />
+      <img src="beam2.jpg" class="clean-pic" alt="Flashlight Device" style="margin-top:10px;" />
+      <a href="https://instagram.com/tny_supply" class="button" target="_blank">Buy Now (DM)</a>
+    </div>
+  </div>
 </section>
 
 <section>
