--- a/index.html
+++ b/index.html
@@ -123,18 +123,41 @@
 </section>
 
 <section>
-  <h2>💸 Payment Options</h2>
-  <ul>
-    <li>Cash App: <strong>$Tony2slaze</strong></li>
-    <li>Zelle: <strong>tono89877@gmail.com</strong></li>
-    <li>Apple Pay: <strong>(Phone # Coming Soon)</strong></li>
-  </ul>
+  <h2>📲 Book a Shoe Cleaning</h2>
+  <p>Use the form below to request a cleaning. I’ll contact you to confirm details and payment.</p>
+  <form action="mailto:tonymogon78@gmail.com" method="POST" enctype="text/plain" style="max-width:600px; margin:auto; background:#fff; padding:20px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" name="name" required style="width:100%; padding:8px; margin:6px 0;"><br>
+
+    <label for="instagram">Instagram Handle:</label><br>
+    <input type="text" id="instagram" name="instagram" placeholder="@your_ig" style="width:100%; padding:8px; margin:6px 0;"><br>
+
+    <label for="shoes">What shoes are you sending?</label><br>
+    <textarea id="shoes" name="shoes" rows="3" style="width:100%; padding:8px; margin:6px 0;"></textarea><br>
+
+    <label for="requests">Any special requests?</label><br>
+    <textarea id="requests" name="requests" rows="2" style="width:100%; padding:8px; margin:6px 0;"></textarea><br>
+
+    <label for="address">Return Address:</label><br>
+    <textarea id="address" name="address" rows="3" style="width:100%; padding:8px; margin:6px 0;"></textarea><br>
+
+    <input type="submit" value="Book My Cleaning" class="button" style="margin-top:10px;">
+  </form>
 </section>
 
 <section>
   <h2>📬 Contact Me</h2>
   <a href="https://instagram.com/tny_supply" class="button" target="_blank">Instagram</a>
   <a href="mailto:tonymogon78@gmail.com" class="button">Email Me</a>
+</section>
+
+<section>
+  <h2>💸 Payment Options</h2>
+  <ul>
+    <li>Cash App: <strong>$Tony2slaze</strong></li>
+    <li>Zelle: <strong>tono89877@gmail.com</strong></li>
+    <li>Apple Pay: <strong>(Phone # Coming Soon)</strong></li>
+  </ul>
 </section>
 
 <section>
