--- a/index.html
+++ b/index.html
@@ -143,15 +143,13 @@
 <section>
   <h2>📲 Book a Shoe Cleaning</h2>
   <p>Use the form below to request a cleaning. I’ll contact you to confirm details and payment.</p>
-  <form action="https://formsubmit.co/tonymogon78@gmail.com" method="POST">
+  <form action="https://hooks.zapier.com/hooks/catch/17744043/3pg4qqo/" method="POST">
     <input type="text" name="name" placeholder="Your Name" required><br><br>
     <input type="text" name="instagram" placeholder="Instagram Handle"><br><br>
     <textarea name="shoes" placeholder="What shoes are you sending?" rows="3"></textarea><br><br>
     <textarea name="requests" placeholder="Any special requests?" rows="2"></textarea><br><br>
     <textarea name="address" placeholder="Return Address" rows="3"></textarea><br><br>
     <input type="email" name="email" placeholder="Your Email" required><br><br>
-    <input type="hidden" name="_autoresponse" value="Thanks for booking with TNY Supply. We’ll be in touch soon!">
-    <input type="hidden" name="_next" value="https://tonyoz4.github.io/tnysupply.github.io/">
     <input type="submit" value="Book My Cleaning" class="button">
   </form>
 </section>
