--- a/index.html
+++ b/index.html
@@ -94,30 +94,12 @@
   <h2>🧼 Shoe Cleaning Showcase</h2>
   <p>Jordan 5 “Laney” — full cleaning transformation</p>
   <div class="flex-pair">
-    <div>
-      <p><strong>Before</strong></p>
-      <img src="before1.jpg" class="clean-pic" alt="Before 1" />
-    </div>
-    <div>
-      <p><strong>After</strong></p>
-      <img src="after1.jpg" class="clean-pic" alt="After 1" />
-    </div>
-    <div>
-      <p><strong>Before</strong></p>
-      <img src="before2.jpg" class="clean-pic" alt="Before 2" />
-    </div>
-    <div>
-      <p><strong>After</strong></p>
-      <img src="after2.jpg" class="clean-pic" alt="After 2" />
-    </div>
-    <div>
-      <p><strong>Before</strong></p>
-      <img src="before3.jpg" class="clean-pic" alt="Before 3" />
-    </div>
-    <div>
-      <p><strong>After</strong></p>
-      <img src="after3.jpg" class="clean-pic" alt="After 3" />
-    </div>
+    <div><p><strong>Before</strong></p><img src="before1.jpg" class="clean-pic" alt="Before 1" /></div>
+    <div><p><strong>After</strong></p><img src="after1.jpg" class="clean-pic" alt="After 1" /></div>
+    <div><p><strong>Before</strong></p><img src="before2.jpg" class="clean-pic" alt="Before 2" /></div>
+    <div><p><strong>After</strong></p><img src="after2.jpg" class="clean-pic" alt="After 2" /></div>
+    <div><p><strong>Before</strong></p><img src="before3.jpg" class="clean-pic" alt="Before 3" /></div>
+    <div><p><strong>After</strong></p><img src="after3.jpg" class="clean-pic" alt="After 3" /></div>
   </div>
 </section>
 
@@ -143,7 +125,12 @@
 <section>
   <h2>📲 Book a Shoe Cleaning</h2>
   <p>Use the form below to request a cleaning. I’ll contact you to confirm details and payment.</p>
-  <form action="https://hooks.zapier.com/hooks/catch/17744043/3pg4qqo/" method="POST">
+  <form action="https://formsubmit.co/tonymogon78@gmail.com" method="POST">
+    <input type="hidden" name="_next" value="https://tonyoz4.github.io/thankyou.html">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_subject" value="New Shoe Cleaning Booking">
+    <input type="hidden" name="_template" value="table">
+
     <input type="text" name="name" placeholder="Your Name" required><br><br>
     <input type="text" name="instagram" placeholder="Instagram Handle"><br><br>
     <textarea name="shoes" placeholder="What shoes are you sending?" rows="3"></textarea><br><br>
