--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <h2>📲 Book a Shoe Cleaning</h2>
   <p>Use the form below to request a cleaning. I’ll contact you to confirm details and payment.</p>
   <form action="https://formsubmit.co/tonymogon78@gmail.com" method="POST">
-    <input type="hidden" name="_next" value="https://tonyoz4.github.io/thankyou.html">
+    <input type="hidden" name="_next" value="https://tonyoz4.github.io">
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_subject" value="New Shoe Cleaning Booking">
     <input type="hidden" name="_template" value="table">
@@ -175,4 +175,3 @@
 
 </body>
 </html>
-<!-- Trigger rebuild -->
