--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
       color: #777;
       margin: 40px 0;
     }
+    #cart {
+      background: #eee;
+      padding: 15px;
+      border-radius: 8px;
+      display: none;
+      margin-top: 30px;
+    }
   </style>
 </head>
 <body>
@@ -85,40 +92,50 @@
   <h2>What I Offer</h2>
   <ul>
     <li><s>New & used clothes and shoes (On Hold)</s></li>
-    <li>Professional shoe cleaning (scroll down ⬇️)</li>
+    <li>Professional shoe cleaning</li>
     <li>Airsoft Attachments — beams, sights, and more</li>
   </ul>
 </section>
 
 <section>
   <h2>🧼 Shoe Cleaning Showcase</h2>
-  <p>Jordan 5 “Laney” — full cleaning transformation</p>
   <div class="flex-pair">
-    <div><p><strong>Before</strong></p><img src="before1.jpg" class="clean-pic" alt="Before 1" /></div>
-    <div><p><strong>After</strong></p><img src="after1.jpg" class="clean-pic" alt="After 1" /></div>
-    <div><p><strong>Before</strong></p><img src="before2.jpg" class="clean-pic" alt="Before 2" /></div>
-    <div><p><strong>After</strong></p><img src="after2.jpg" class="clean-pic" alt="After 2" /></div>
-    <div><p><strong>Before</strong></p><img src="before3.jpg" class="clean-pic" alt="Before 3" /></div>
-    <div><p><strong>After</strong></p><img src="after3.jpg" class="clean-pic" alt="After 3" /></div>
+    <div><p><strong>Before</strong></p><img src="before1.jpg" class="clean-pic" /></div>
+    <div><p><strong>After</strong></p><img src="after1.jpg" class="clean-pic" /></div>
+    <div><p><strong>Before</strong></p><img src="before2.jpg" class="clean-pic" /></div>
+    <div><p><strong>After</strong></p><img src="after2.jpg" class="clean-pic" /></div>
+    <div><p><strong>Before</strong></p><img src="before3.jpg" class="clean-pic" /></div>
+    <div><p><strong>After</strong></p><img src="after3.jpg" class="clean-pic" /></div>
   </div>
 </section>
 
 <section>
   <h2>🎯 Airsoft Attachments (Shipping Available)</h2>
-  <p>All products can be shipped. DM or email to order — secure your upgrade today.</p>
+  <p>Click to add to cart. DM or send payment to complete your order.</p>
   <div class="flex-pair">
     <div>
       <p><strong>Reflex Sight – $50</strong></p>
-      <img src="reflex1.jpg" class="clean-pic" alt="Reflex Sight Box" />
-      <img src="reflex2.jpg" class="clean-pic" alt="Reflex Sight Open" style="margin-top:10px;" />
-      <a href="https://instagram.com/tny_supply" class="button" target="_blank">Buy Now (DM)</a>
+      <img src="reflex1.jpg" class="clean-pic" />
+      <a href="#" class="button" onclick="addToCart('Reflex Sight - $50')">Add to Cart</a>
     </div>
     <div>
-      <p><strong>MCCC Tactical Flashlight – $25</strong></p>
-      <img src="beam1.jpg" class="clean-pic" alt="Flashlight Box" />
-      <img src="beam2.jpg" class="clean-pic" alt="Flashlight Device" style="margin-top:10px;" />
-      <a href="https://instagram.com/tny_supply" class="button" target="_blank">Buy Now (DM)</a>
+      <p><strong>Beam Flashlight – $25</strong></p>
+      <img src="beam1.jpg" class="clean-pic" />
+      <a href="#" class="button" onclick="addToCart('Beam Flashlight - $25')">Add to Cart</a>
     </div>
+  </div>
+  <a href="#" class="button" onclick="showCart()">View Cart</a>
+  <div id="cart">
+    <h2>Your Cart</h2>
+    <ul id="cartItems"></ul>
+    <h3>Next Step:</h3>
+    <p>Send payment to:</p>
+    <ul>
+      <li>Cash App: <strong>$Tony2slaze</strong></li>
+      <li>Zelle: <strong>tono89877@gmail.com</strong></li>
+    </ul>
+    <p>Then DM me on Instagram with what you ordered + screenshot of payment:</p>
+    <a href="https://instagram.com/tny_supply" class="button" target="_blank">DM @tny_supply</a>
   </div>
 </section>
 
@@ -130,7 +147,6 @@
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_subject" value="New Shoe Cleaning Booking">
     <input type="hidden" name="_template" value="table">
-
     <input type="text" name="name" placeholder="Your Name" required><br><br>
     <input type="text" name="instagram" placeholder="Instagram Handle"><br><br>
     <textarea name="shoes" placeholder="What shoes are you sending?" rows="3"></textarea><br><br>
@@ -139,12 +155,6 @@
     <input type="email" name="email" placeholder="Your Email" required><br><br>
     <input type="submit" value="Book My Cleaning" class="button">
   </form>
-</section>
-
-<section>
-  <h2>📬 Contact Me</h2>
-  <a href="https://instagram.com/tny_supply" class="button" target="_blank">Instagram</a>
-  <a href="mailto:tonymogon78@gmail.com" class="button">Email Me</a>
 </section>
 
 <section>
@@ -157,21 +167,45 @@
 </section>
 
 <section>
-  <h2>⚠️ Important Notice</h2>
-  <p>Please beware of scammers! I, TNY Supply, only operate through this website and my official Instagram: <strong>@tny_supply</strong>.</p>
-  <p>I do not message from other accounts or ask for payments through unfamiliar apps or numbers. If it’s not listed here — it’s not me.</p>
+  <h2>📬 Contact Me</h2>
+  <a href="https://instagram.com/tny_supply" class="button" target="_blank">Instagram</a>
+  <a href="mailto:tonymogon78@gmail.com" class="button">Email Me</a>
+</section>
+
+<section>
+  <h2>⚠️ Scam Warning</h2>
+  <p>I only use this website and my official Instagram @tny_supply. Never send money or info to anyone claiming to be me from another account.</p>
 </section>
 
 <section>
   <h2>📦 Shoe Cleaning Shipping Address</h2>
-  <p>Send shoes for cleaning to:</p>
   <p><strong>132 E 163rd St<br>Gardena, CA 90248</strong></p>
-  <p>Please include your name, return address, and IG handle inside the box.</p>
+  <p>Include your name, IG handle, and return address inside the box.</p>
 </section>
 
 <footer>
   &copy; 2025 tnysupply. Built by one man, for the culture.
 </footer>
+
+<script>
+  let cart = [];
+  function addToCart(item) {
+    cart.push(item);
+    alert(item + " added to cart!");
+  }
+  function showCart() {
+    const cartDiv = document.getElementById("cart");
+    const cartList = document.getElementById("cartItems");
+    cartList.innerHTML = "";
+    cart.forEach(item => {
+      const li = document.createElement("li");
+      li.textContent = item;
+      cartList.appendChild(li);
+    });
+    cartDiv.style.display = "block";
+    cartDiv.scrollIntoView({ behavior: "smooth" });
+  }
+</script>
 
 </body>
 </html>
